refactor: Update Agent_Init.md and docker-compose.yml for improved configuration and service clarity; add ngrok.yml for tunnel setup

--- a/ops/compose/docker-compose.yml
+++ b/ops/compose/docker-compose.yml
@@ -249,6 +249,7 @@ services:
     container_name: agent-ngrok
     restart: unless-stopped
     environment:
+      - NGROK_AUTHTOKEN=${NGROK_AUTHTOKEN}
       - NGROK_DOMAIN=${NGROK_DOMAIN:-}
       - NGROK_TRAEFIK_DOMAIN=${NGROK_TRAEFIK_DOMAIN:-}
     ports:
