refactor: Update ngrok configuration and setup; replace ngrok.yml with template and streamline entrypoint script

--- a/ops/compose/docker-compose.yml
+++ b/ops/compose/docker-compose.yml
@@ -257,7 +257,7 @@ services:
     networks:
       - agent-network
     volumes:
-      - ../dev/ngrok/ngrok.yml:/etc/ngrok.yml:ro
+      - ../dev/ngrok/ngrok.yml.template:/tmp/ngrok.yml.template:ro
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.ngrok.rule=PathPrefix(`/ngrok`)"
