--- a/ops/compose/docker-compose.yml
+++ b/ops/compose/docker-compose.yml
@@ -59,7 +59,7 @@ services:
       - "traefik.http.routers.gateway.middlewares=gateway-strip"
       - "traefik.http.services.gateway.loadbalancer.server.port=8080"
     healthcheck:
-      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:8080/health"]
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://0.0.0.0:8080/health"]
       interval: 30s
       timeout: 5s
       retries: 3
@@ -139,7 +139,7 @@ services:
       - "traefik.http.routers.adapter.middlewares=adapter-strip"
       - "traefik.http.services.adapter.loadbalancer.server.port=8080"
     healthcheck:
-      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:8080/health"]
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://0.0.0.0:8080/health"]
       interval: 30s
       timeout: 5s
       retries: 3
@@ -177,7 +177,7 @@ services:
       - "traefik.http.routers.llm.middlewares=llm-strip"
       - "traefik.http.services.llm.loadbalancer.server.port=8080"
     healthcheck:
-      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:8080/health"]
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://0.0.0.0:8080/health"]
       interval: 30s
       timeout: 10s
       retries: 3
