--- a/docker-compose.full.yml
+++ b/docker-compose.full.yml
@@ -339,6 +339,7 @@ services:
     image: grafana/loki:2.9.0
     container_name: agent-loki
     restart: unless-stopped
+    user: "0:0"  # Run as root to ensure write permissions
     ports:
       - "3100:3100"
     volumes:
