Replace 'Enterprise' with 'Professional' - more realistic naming

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "natural-language-processing",
     "git-automation",
     "self-hosted",
-    "enterprise-ai",
+    "professional-ai",
     "ci-cd",
     "development-workflow",
     "ai-powered-coding",
