--- a/.github/workflows/architecture-docs.yml
+++ b/.github/workflows/architecture-docs.yml
@@ -9,7 +9,10 @@ on:
     paths:
       - 'docs/**'
       - 'README.md'
-      - '.github/workflows/**'
+      - 'architecture-template.html'
+      - 'architecture.html'
+      - '.github/workflows/architecture-docs.yml'
+  workflow_dispatch:
   pull_request:
     branches: [ main ]
     paths:
