--- a/.github/workflows/simple-deploy.yml
+++ b/.github/workflows/simple-deploy.yml
@@ -13,6 +13,9 @@ permissions:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     steps:
     - uses: actions/checkout@v4
     - name: Setup Pages
@@ -33,4 +36,5 @@ jobs:
       with:
         path: _site/
     - name: Deploy
+      id: deployment
       uses: actions/deploy-pages@v4
